# gameguage

./: .gitignore  README.md  main.py  pyproject.toml
src/: auth_data.py  database.py  main.py
src/data_interaction/data/: fill_words.json  quotes.json  words.json
src/data_interaction/generate_data/: generate_fill_words.py  generate_words.py
src/data_interaction/insert_data/: insert_in_book_quotes_tables.py  insert_in_en_words_table.py  insert_in_gap_table.py
src/handlers/: deciphering.py  fill.py  help.py  quote.py  start.py  translation.py  words.py
