[tool.poetry]
name = "gameguage"
version = "0.1.0"
description = ""
authors = ["IndianMax03"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.4.1"
googletrans = "^3.0.0"
translatepy = "^2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
